2003-02-12  Mark Salter  <msalter@redhat.com>

	* include/iq80321.h: Fix battery defines.
	* src/diag/battery.c: Fix battery tests to match updated docs.

2003-01-30  Mark Salter  <msalter@redhat.com>

	* include/pkgconf/mlt_*: Adjust RAM size to match max supported.
	Actual size of installed RAM determined at runtime.
	
2003-01-22  Mark Salter  <msalter@redhat.com>

	* src/diag/diag.c: Don't define DEFINE_VARS.

2002-09-23  Mark Salter  <msalter@redhat.com>

	* include/plf_mmap.h: Remove. Not used.

2002-09-19  Mark Salter  <msalter@redhat.com>

	* misc/redboot_RAM.ecm: Add CYGPKG_HAL_ARM_XSCALE_CORE.
	* misc/redboot_RAM_ALTMAP.ecm: Ditto.
	* misc/redboot_ROM.ecm: Ditto.
	* misc/redboot_ROM_ALTMAP.ecm: Ditto.

2002-08-12  Mark Salter  <msalter@redhat.com>

	* misc/redboot_ROM.ecm: Remove CYGSEM_REDBOOT_ARM_LINUX_BOOT.
	* misc/redboot_RAM.ecm: Ditto.

	* include/hal_platform_setup.h: Do some ATU initialization
	before scrubbing, so PC BIOS can continue booting during
	time consuming scrub.

	* src/iq80321_pci.c (cyg_hal_plf_pci_init): Always set ATUCMD
	register. Moved some ATU initialization to hal_platform_setup.h.
	(cyg_hal_plf_wait_for_bios): Moved some ATU initialization to
	hal_platform_setup.h.

2002-07-15  Mark Salter  <msalter@redhat.com>

	* include/pkgconf/mlt_arm_xscale_iq80321_rom.mlt: Add mmu_tables section.
	* include/pkgconf/mlt_arm_xscale_iq80321_rom.ldi: Regenerated.
	* include/pkgconf/mlt_arm_xscale_iq80321_rom.h: Ditto.

2002-05-28  Mark Salter  <msalter@redhat.com>

	* cdl/hal_arm_xscale_iq80321.cdl: Add HAL_PLATFORM_MACHINE_TYPE.

	* misc/redboot_RAM.ecm: Changed Linux address.
	* misc/redboot_ROM.ecm: Ditto.

2002-05-24  Jonathan Larmour  <jlarmour@redhat.com>

	* src/hal_diag.c: Support dynamic getting and setting of baud rates.
	* cdl/hal_arm_xscale_iq80321.cdl: implements
	CYGINT_HAL_VIRTUAL_VECTOR_COMM_BAUD_SUPPORT

2002-05-07  Gary Thomas  <gthomas@redhat.com>

	* cdl/hal_arm_xscale_iq80321.cdl: 