@@ -1,3 +1,7 @@
+2003-02-22  Mark Salter  <msalter@redhat.com>
+
+	* src/iq80321_pci.c (cyg_hal_plf_pci_init): Make BAR0 non-prefetchable.
+
 2003-02-12  Mark Salter  <msalter@redhat.com>
 
 	* include/iq80321.h: Fix battery defines.
